--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,8 @@
 @import url('utlities.css');
 @import url('typography.css');
 @import url('form.css');
-
+@import url('buttons.css');
 /* modules */
 @import url('nav.css');
 @import url('hero.css');
+@import url('cards.css');
