--- a/styles/typography.css
+++ b/styles/typography.css
@@ -46,3 +46,10 @@ p.lead {
 .small {
     font-size: 75%;
 }
+.drop {
+    display: inline;
+    float: left;
+    padding: .30em .08em 0 0;
+    line-height: .4em;
+    font-size: 3.2em
+}
