--- a/styles/typography.css
+++ b/styles/typography.css
@@ -53,3 +53,8 @@ p.lead {
     line-height: .4em;
     font-size: 3.2em
 }
+@media (max-width: 414px) {
+    .hero-headline {
+        font-size: 5rem;
+    }
+}
