--- a/styles/nav.css
+++ b/styles/nav.css
@@ -11,10 +11,8 @@
     background-position: center center;
     background-size: contain;
 }
-.navbar {
-	.flex-end {
-		display: flex;
-		flex-direction: row;
-		justify-content: flex-end;
-	}
+.navbar .flex-end {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
 }
