add lab for css grid

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 @import url('normalize.css');
 @import url('flexboxgrid.css');
 @import url('base.css');
+@import url('lab.css');
 @import url('utlities.css');
 @import url('typography.css');
 @import url('form.css');
